updated seo stuff

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,10 +24,10 @@
     <!-- Open Graph / Social Media Meta Tags -->
     <meta property="og:title" content="How's The Roads? - Live Kansas City Traffic Cameras">
     <meta property="og:description" content="{{ site.description }}">
-    <meta property="og:image" content="{{ site.url }}/og.png">
+    <meta property="og:image" content="https://howstheroads.com/og.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
-    <meta property="og:url" content="{{ site.url }}">
+    <meta property="og:url" content="https://howstheroads.com">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="How's The Roads?">
     <meta property="og:locale" content="en_US">
@@ -36,7 +36,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="How's The Roads? - Live Kansas City Traffic Cameras">
     <meta name="twitter:description" content="{{ site.description }}">
-    <meta name="twitter:image" content="{{ site.url }}/og.png">
+    <meta name="twitter:image" content="https://howstheroads.com/og.png">
     <meta name="twitter:site" content="@howstheroads">
     
     <!-- Favicon and Apple Touch Icons -->
@@ -60,7 +60,7 @@
       "@context": "https://schema.org",
       "@type": "WebApplication",
       "name": "How's The Roads?",
-      "url": "{{ site.url }}",
+      "url": "https://howstheroads.com",
       "description": "{{ site.description }}",
       "applicationCategory": "Transportation",
       "operatingSystem": "Web",
@@ -72,7 +72,7 @@
       "author": {
         "@type": "Organization",
         "name": "How's The Roads?",
-        "url": "{{ site.url }}"
+        "url": "https://howstheroads.com"
       },
       "contentLocation": {
         "@type": "City",
@@ -94,7 +94,7 @@
         "@type": "ListItem",
         "position": 1,
         "name": "Home",
-        "item": "{{ site.url }}"
+        "item": "https://howstheroads.com"
       }]
     }
     </script>
